# apts-release-tool

./: .gitignore  APTS-RELEASE-TOOL-PLAN.md  CLAUDE-CODE-BRIEFING.md  CLAUDE.md  install.bat
apts-release/: .gitignore  README.md  pyproject.toml
apts-release/docs/: release-config-template.yaml
apts-release/src/apts_release/: __init__.py  changelog.py  cli.py  config.py  excel_export.py  package_ota.py  package_rpi.py  registry.py  scanner.py  utils.py  version_extractor.py
